--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+
 
 }
