--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,9 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
 
+    implementation 'com.github.duanhong169:colorpicker:1.1.6'
+
+
+
 
 }
