--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:21.3.0'
 
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
+    implementation "com.android.billingclient:billing:5.1.0"
 
 
 
